--- a/src/styles/backgrounds.css
+++ b/src/styles/backgrounds.css
@@ -237,7 +237,7 @@
     0px 12px
   );
   color: rgb(23, 15, 30);
-  font-family: "JetBrains Mono", sans-serif;
+  font-family: "JetBrains Mono", sans-serif !important;
   font-size: 16px;
   font-weight: 500;
   line-height: 24px;
