--- a/src/styles/computer.css
+++ b/src/styles/computer.css
@@ -1,9 +1,10 @@
-.hPWill {
+.computerGif {
   -webkit-animation: izrrXy 3s infinite;
   animation: izrrXy 3s infinite;
   position: relative;
-} /*!sc*/
-.hPWill .doLogo {
+} 
+
+.computerGif .doLogo {
   -webkit-animation: izrrXy 5s infinite;
   animation: izrrXy 5s infinite;
   margin-bottom: 6px;
@@ -16,8 +17,9 @@
   -webkit-justify-content: center;
   -ms-flex-pack: center;
   justify-content: center;
-} /*!sc*/
-.hPWill .computer-container {
+} 
+
+.computerGif .computer-container {
   height: 63px;
   width: 66px;
   display: -webkit-box;
@@ -33,8 +35,9 @@
   -ms-flex-align: center;
   align-items: center;
   position: relative;
-} /*!sc*/
-.hPWill .computer-container .wave-container {
+} 
+
+.computerGif .computer-container .wave-container {
   height: 60%;
   width: 80%;
   display: -webkit-box;
@@ -52,21 +55,26 @@
   position: absolute;
   top: 8px;
   overflow: hidden;
-} /*!sc*/
-.hPWill .computer-container .wave-container .wave {
+} 
+
+.computerGif .computer-container .wave-container .wave {
   position: absolute;
   -webkit-animation: cxKzrH 4s steps(16) infinite;
   animation: cxKzrH 4s steps(16) infinite;
-} /*!sc*/
-.hPWill .computer-container .computer {
+} 
+
+.computerGif .computer-container .computer {
   position: absolute;
-} /*!sc*/
-.hPWill .glow {
+} 
+
+.computerGif .glow {
   -webkit-filter: drop-shadow(-1px -1px 2px rgba(255, 215, 77, 0.6))
     drop-shadow(1px 1px 2px rgba(124, 127, 255, 0.6));
   filter: drop-shadow(-1px -1px 2px rgba(255, 215, 77, 0.6))
     drop-shadow(1px 1px 2px rgba(124, 127, 255, 0.6));
-} /*!sc*/
+} 
+
 data-styled.g27[id="pixels__PixelComputerWrapper-sc-qc1bi4-2"] {
-  content: "hPWill,";
-} /*!sc*/
+  content: "computerGif,";
+} 
+
