--- a/src/styles/backgrounds.css
+++ b/src/styles/backgrounds.css
@@ -146,12 +146,14 @@
     drop-shadow(1px 1px 2px rgba(124, 127, 255, 0.6));
   margin-top: 0;
   margin-bottom: 64px;
-} /*!sc*/
+} 
+
 .divider_wrapper.reverse {
   -webkit-transform: scaleX(-1);
   -ms-transform: scaleX(-1);
   transform: scaleX(-1);
-} /*!sc*/
+} 
+
 .divider_wrapper .long {
   -webkit-align-self: flex-end;
   -ms-flex-item-align: end;
@@ -159,7 +161,8 @@
   background: #e5e1e6;
   height: 1px;
   width: 50%;
-} /*!sc*/
+} 
+
 .divider_wrapper .angled_wrapper {
   -webkit-align-items: center;
   -webkit-box-align: center;
@@ -176,7 +179,8 @@
   justify-content: center;
   overflow: hidden;
   width: 16px;
-} /*!sc*/
+} 
+
 .divider_wrapper .angled_wrapper .angled {
   background: #e5e1e6;
   height: 1px;
@@ -185,7 +189,8 @@
   -ms-transform: rotate(-45deg);
   transform: rotate(-45deg);
   width: 22px;
-} /*!sc*/
+} 
+
 .divider_wrapper .short {
   -webkit-align-self: flex-start;
   -ms-flex-item-align: start;
@@ -193,7 +198,8 @@
   background: #e5e1e6;
   height: 1px;
   width: 50%;
-} /*!sc*/
+} 
+
 .divider_wrapper .garnish_wrapper {
   display: -webkit-box;
   display: -webkit-flex;
@@ -205,26 +211,30 @@
   position: absolute;
   top: 0;
   width: 20%;
-} /*!sc*/
+} 
+
 .divider_wrapper .garnish_wrapper .garnish {
   background: #e5e1e6;
   height: 100%;
-} /*!sc*/
+} 
+
 .divider_wrapper .garnish_wrapper .garnish.short {
   width: 25%;
-} /*!sc*/
+} 
+
 .divider_wrapper .garnish_wrapper .garnish.long {
   width: 75%;
-} /*!sc*/
+} 
 
-.gXAilS {
+
+.pinkButton {
   display: inline-block;
   max-width: 100%;
   height: 40px;
   transition: all 0.2s ease 0s;
 }
 
-.gXAilS .btn {
+.pinkButton .btn {
   background: rgb(234, 74, 170) none repeat scroll 0% 0%;
   border: medium none;
   border-radius: 2px;
@@ -318,7 +328,8 @@
   98% {
     opacity: 1;
   }
-} /*!sc*/
+} 
+
 @keyframes izrrXy {
   0% {
     opacity: 1;
@@ -360,7 +371,8 @@
   display: -webkit-flex;
   display: -ms-flexbox;
   display: flex;
-} /*!sc*/
+} 
+
 .hOLCdd:before {
   content: "";
   position: absolute;
@@ -384,7 +396,8 @@
   width: 100%;
   height: 120%;
   z-index: -1;
-} /*!sc*/
+} 
+
 .hOLCdd:after {
   position: absolute;
   top: 0;
@@ -405,18 +418,21 @@
     black -40%,
     transparent 60%
   );
-} /*!sc*/
+} 
+
 @media (max-width: 600px) {
   .hOLCdd {
     padding: 0 24px;
   }
-} /*!sc*/
+} 
+
 
 .ksQOpk {
   border-top: 1px solid rgba(229, 225, 230, 0.5);
   padding: 40px 16px;
   text-transform: uppercase;
-} /*!sc*/
+} 
+
 .ksQOpk::before {
   position: absolute;
   top: 0;
@@ -426,7 +442,8 @@
   height: 1px;
   width: 100%;
   background: linear-gradient(90deg, #ffd74d 0%, #40ddff 50%, #7c7fff 100%);
-} /*!sc*/
+} 
+
 .ksQOpk h3 {
   margin: 16px 0;
   font-family: "JetBrains Mono";
@@ -434,13 +451,15 @@
   font-weight: 500;
   font-size: 24px;
   line-height: 32px;
-} /*!sc*/
+} 
+
 .ksQOpk ul li {
   display: inline-block;
   margin: 0 40px 0 0;
   word-wrap: break-word;
   max-width: 100%;
-} /*!sc*/
+} 
+
 .ksQOpk ul li span {
   font-family: "JetBrains Mono";
   font-style: normal;
@@ -448,4 +467,5 @@
   font-size: 16px;
   line-height: 24px;
   opacity: 0.5;
-} /*!sc*/
+} 
+
