--- a/src/styles/base.css
+++ b/src/styles/base.css
@@ -1,6 +1,6 @@
 body {
   background: #170f1e;
-  background-image: url(https://hacktoberfest.com/_next/static/media/grain-dark.9d5983e6.png);
+  background-image: url(/grain-dark.png);
   color: #e5e1e6;
 }
 
