--- a/src/components/FooterSection.scss
+++ b/src/components/FooterSection.scss
@@ -51,6 +51,7 @@
   }
   .endbrtxttwo{
     padding-right: 40px !important;
+    align:"right";
     font-size: medium;
     color: #ffffff;
     text-align: right;
@@ -136,3 +137,7 @@
     text-align: center;
   }
   }
+
+.socialIcons{
+    align:"center";
+}
