--- a/src/components/FooterSection.scss
+++ b/src/components/FooterSection.scss
@@ -45,12 +45,16 @@
   
   .endbrtxt {
     padding-left: 40px !important;
+    margin-top: 10px;
+    margin-bottom: 10px;
     font-size: medium;
     color: #ffffff;
     text-align: left;
   }
   .endbrtxttwo{
     padding-right: 40px !important;
+    margin-top: 10px;
+    margin-bottom: 10px;
     align:"right";
     font-size: medium;
     color: #ffffff;
@@ -59,7 +63,7 @@
   .endbr {
     margin-top: 2%;
     width: 100%;
-    height: 15%;
+    height: 25%;
     background: linear-gradient(to right, #0a1f2e 45%, #35093d) !important;
     opacity: 0.5;
   }
