Footer Section Final 1

--- a/src/components/FooterSection.scss
+++ b/src/components/FooterSection.scss
@@ -55,7 +55,7 @@
   padding-right: 40px !important;
   margin-top: 10px;
   margin-bottom: 10px;
-  align:"right";
+  // align:"right";
   font-size: medium;
   color: #ffffff;
   text-align: right;
@@ -142,6 +142,6 @@
 }
 }
 
-.socialIcons{
-  align:"center";
-}
+// .socialIcons{
+//   align:"center";
+// }
